# RAG

./: .gitignore  README.md  README_EN.md
backend/: .env.example  Makefile  pyproject.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/models/: conversation.py  document.py  graph.py  query.py
backend/app/routers/: conversations.py  documents.py  graph.py  health.py  query.py
backend/app/services/: answer_service.py  conversation_service.py  document_registry_service.py  entity_extraction_service.py  graph_service.py  hybrid_retrieval_service.py  ingestion_service.py  vector_service.py
backend/app/utils/: logger.py  mineru_parser.py  rrf.py
