[project]
name = "graphrag-backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
    # LangChain 1.x
    "langchain>=1.2",
    "langchain-openai>=0.2",
    "langchain-chroma>=0.1",
    "langchain-neo4j>=0.1",
    "langchain-text-splitters>=0.3",
    "langgraph>=1.0",
    # Knowledge graph extraction
    "langextract[openai]",
    # Database drivers
    "chromadb>=0.5",
    "neo4j>=5.0",
    # Config and validation
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    # HTTP clients
    "requests>=2.31",
    "httpx>=0.24",
    # Utilities
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "aiofiles>=23.0",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
